# src/main/java/me/zort/iis/server/iisserver/http/model/campaign/CreateCampaignRequest.java
@@ -1,0 +1,18 @@
+package me.zort.iis.server.iisserver.http.model.campaign;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class CreateCampaignRequest {
+    @NotBlank
+    private String name;
+    @NotNull
+    private Long themeId;
+
+}
